--- a/css/sass/components/_cards.scss
+++ b/css/sass/components/_cards.scss
@@ -29,12 +29,19 @@
     border-radius: $radius-md;
     border: 1px dashed rgba(#fff, 0.18);
     background: rgba(#000, 0.15);
-
+    
+    overflow: hidden;
+    
     display: flex;
     align-items: center;
     justify-content: center;
+}
 
-    margin-bottom: $space-3;
+.card-media img.media-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .media-placeholder {
@@ -53,4 +60,10 @@
     margin-top: 4px;
     color: $text-dim;
     font-size: 14px;
+}
+
+.media-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
